# Anaglifator

./: .gitignore  CMakeLists.txt  MainFrame.cpp  MainFrame.h  Matrix.cpp  Matrix.hpp  MyApp.cpp  MyApp.h  Object3D.cpp  Object3D.hpp  README.md  SFMLCanvas.cpp  SFMLCanvas.h  Vector4.cpp  Vector4.hpp  hehe.txt  test_450.txt  wsad.txt
